2010-06-19  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, beacon.c, config.c, digipeater.c, interface.c,
	  telemetry.c, ttyreader.c:
	    Improve config file parsing error reporting.

	* aprx.conf.in, aprx-complex.conf.in, aprx.8.in:
	    Clarify the documentation at man-page, and at config templates.

	* firmware/*
	    Copied one source of TNC2 firmwares

	* windows/*
	    Just a placeholder.

	* Makefile.in:
	    Improving "make dist" behaviour.

2010-06-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, doc/aprx-manual.odt:
	    Some notes on available baud-rates, fixes on
	    documentation about CRC algorithms.

	* ttyreader.c:
	    Missed baud speed 57600.

	* dupecheck.c:
	    Shrink the arena allocation size to 4 kB.  This allows
	    14 reference packets in the dupecheck dataset within that
	    arena alone, and will possibly request second arena when
	    this get really busy.

	* historydb.c, dupecheck.c, pbuf.c, filter.c:
	    Made cell object sizes readable with a debugger

	* crc.c:
	    Object visibility adjustments.

	* Makefile.in, crc.c, aprx.h, kiss.c, ttyreader.c, interface.c:
	    Separated KISS processing to kiss.c, and CRC processing
	    to crc.c.  Disabled unused codes.

	* pbuf.c, historydb.c, dupecheck.c:
	    Shrink RAM usage, cellmalloc() does perfectly good job
	    of using free-chains, no need to do it in applications.

	* interface.c, pbuf.c:
	    The pbuf_new() has a limit on maximum total size that
	    a packet can be: 2150 bytes.  If ax25len + tnc2len are
	    more than that, pbuf_new() returns NULL.

	* historydb.c, historydb.h:
	    Instead of historydb instance specific history entry pools,
	    have one global pool.

2010-06-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* cellmalloc.c:
	    Remove pthread_mutex_t usage, not needed in this application!
	    Conditionalize debugging code.

	* pbuf.c, aprx.c, aprx.h:
	    Using cellmalloc() on pbuf storage. Support up to 2150 byte